# pixi

./: README-ja.md  README.md
ROS2/: README-j.md
ROS2/my_ros2_project/: pixi.toml
ROS2/my_ros2_project/src/my_cpp_package/: CMakeLists.txt  package.xml
ROS2/my_ros2_project/src/my_package/: package.xml  setup.py
python/: README-j.md  README-ja.md  pyproject.toml
python/pixi-py/test/: test_me.py
