[project]
authors = [{name = "Hiroyuki Okada", email = "okdhryk@gmail.com"}]
dependencies = ["black", "flask[async]==3.1.0", "rich>=14.2.0,<15"]
name = "pixi-py"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
pixi_py = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
black = ">=25.1.0,<26"
pygments = ">=2.19.2,<3"

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.pixi.feature.test.tasks]
test = "pytest"

[dependency-groups]
test = ["pytest"]
